[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.10.21"
borsh = "0.9.3"
borsh-derive = "0.9.3"
thiserror = "1.0.24"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.10.21"
solana-sdk = "=1.10.21"
solana-validator = "=1.10.21"
solana-logger = "=1.10.21"

[lib]
crate-type = ["cdylib", "lib"]
